// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one - small 1`] = `
<View>
  <Text>
    lead
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#DBDBDB",
        "height": 1,
      }
    }
  />
  <Text>
    support
  </Text>
</View>
`;

exports[`2. lead one and one - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 15,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;
